syntax = "proto3";
package calc;

option java_package = "com.proto.calc";
option java_multiple_files = true;

message SumRequest {
  int32 x = 1;
  int32 y = 2;
}

message SumResponse{
  int32 result = 1;
}
message AverageRequest {
  double number = 1;
}

message AverageResponse{
  double average = 1;
}

message FindMaximumRequest{
  int32 number = 1;
}
message FindMaximumResponse{
  int32 maximum = 1;
}
message SquareRootRequest{
  int32 number = 1;
}
message SquareRootResponse{
  double number = 1;
}
service CalculatorService{
  rpc sum(SumRequest) returns (SumResponse) {};
  rpc average(stream AverageRequest) returns (AverageResponse) {};
  rpc maximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
  rpc squareRoot(SquareRootRequest) returns (SquareRootResponse) {}
}